Fix css on mobile

--- a/index.responsive.css
+++ b/index.responsive.css
@@ -8,7 +8,6 @@
   .label__text{
     font-size: 14px;
     width: 90%;
-    font-family: 'open sans';
   }
 
   #tag{
