--- a/quizz/styles/quizz.responsive.css
+++ b/quizz/styles/quizz.responsive.css
@@ -2,7 +2,6 @@
 
   #question{
     font-size: 14px;
-    border: 1px solid white;
     padding: 5px 10px;
   }
 
